# flow-bench

./: .gitignore  AGENTS.md  CONTRIBUTING.md  FlowBench Product Scope v2.0.md  README.md  master-plan.json  master-plan.md  phase-1-implementation-plan.md  phase-2-implementation-plan.md  pyproject.toml  workflow-contract.json
adapters/commands/: audit-existing-app.md  build-phase.md  fix-findings.md  generate-handoff.md  generate-master-plan.md  generate-phase-plan.md  review-phase.md  sharpen-plan.md  summarize-state.md  test-phase.md
apps/web/: jest.config.js  package-lock.json  package.json  tailwind.config.ts
config/: actions.json  policies.json  project-modes.json  workflows.json
config/adapters/: opencode.json
docs/: flowbench-phase9-design-guide.md  master-plan.json  master-plan.md  phase-1-implementation.md  phase-2-implementation.md  phase-8-build.md  workflow-contract.json
docs/archive/: flowbench-master-plan-feedback.md
docs/plan/: phase-1-implementation-plan.md  phase-1-plan.md  phase-11-plan.md  phase-2-implementation-plan.md  phase-3-implementation-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  phase-8-plan.md  phase-9-plan.md  phase1_feedback_to_opencode.md
scripts/: prereq-check.sh  smoke-test.sh
services/config/: policies.json
services/orchestrator/: cli.py  main.py  policies.py
services/orchestrator/adapters/: base.py  opencode.py
services/orchestrator/api/: actions.py  error_handlers.py  events.py  runs.py  state.py
services/orchestrator/engine/: __init__.py  guards.py  (+3 more)
(+90 files in other folders)
